# Tax-Prep

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: calculations.py  deductions.py  documents.py  income.py  interview.py  pdf.py  returns.py  review.py  router.py  taxpayer.py
backend/app/interview/: __init__.py  engine.py
backend/app/interview/flows/: credits.yaml  deductions.yaml  income.yaml  main.yaml  personal_info.yaml  review.yaml
backend/app/models/: __init__.py  base.py  calculation.py  capital_gains.py  credits.py  deductions.py  income.py  tax_return.py  taxpayer.py
backend/app/ocr/: classifier.py  processor.py
backend/app/ocr/extractors/: __init__.py  base.py  f1099_div_extractor.py  f1099_int_extractor.py  w2_extractor.py
backend/app/pdf/: generator.py  summary_report.py
backend/app/pdf/field_mappings/: __init__.py  form_1040_fields.py  schedule_a_fields.py  schedule_b_fields.py  schedule_d_fields.py
backend/app/schemas/: calculation.py  income.py  tax_return.py  taxpayer.py
backend/app/tax_engine/: engine.py  parameters.py  solver.py
backend/app/tax_engine/forms/: base.py  form_1040.py  form_8949.py  schedule_a.py  schedule_b.py  (+1 more)
backend/app/validation/: models.py  validator.py
backend/tests/: conftest.py
backend/tests/test_api/: test_calculations.py  test_returns.py
backend/tests/test_pdf/: test_generator.py  test_summary_report.py
backend/tests/test_tax_engine/: test_integration.py
(+35 files in other folders)
